rest-heroes/k8s/rest-heroes.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: 56cbcc3ffd0ef612eb3e21df6e8cc52dc39c1dbd
    app.quarkus.io/build-timestamp: 2023-03-31 - 04:02:53 +0000
  labels:
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/name: rest-heroes
  name: rest-heroes
  namespace: superheroes
spec:
  ingressClassName: nginx
  rules:
    - host: superheroes.com
      http:
        paths:
          - backend:
              service:
                name: rest-heroes
                port:
                  number: 80
            path: /api/heroes
            pathType: Prefix
    - host: ""
      http:
        paths:
          - backend:
              service:
                name: rest-heroes
                port:
                  name: http
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heroes-database
  namespace: superheroes
spec:
  replicas: 1
  selector:
    matchLabels:
      name: heroes-database
  template:
    metadata:
      labels:
        name: heroes-database
      namespace: superheroes
    spec:
      containers:
        - env:
            - name: POSTGRESQL_USER
              valueFrom:
                configMapKeyRef:
                  key: postgresql-user
                  name: heroes-config
            - name: POSTGRESQL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: postgresql-password
                  name: heroes-config
            - name: POSTGRESQL_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: postgresql-database
                  name: heroes-config
          image: centos/postgresql-96-centos7
          imagePullPolicy: IfNotPresent
          name: heroes-database
          ports:
            - containerPort: 5432
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: heroes-database
  namespace: superheroes
spec:
  ports:
    - name: http
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: heroes-database
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 56cbcc3ffd0ef612eb3e21df6e8cc52dc39c1dbd
    app.quarkus.io/build-timestamp: 2023-03-31 - 04:02:53 +0000
  labels:
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/name: rest-heroes
  name: rest-heroes
  namespace: superheroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/version: 1.0.0
      app.kubernetes.io/name: rest-heroes
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 56cbcc3ffd0ef612eb3e21df6e8cc52dc39c1dbd
        app.quarkus.io/build-timestamp: 2023-03-31 - 04:02:53 +0000
      labels:
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/name: rest-heroes
      namespace: superheroes
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: jeremygilbert/rest-heroes:1.0.0
          imagePullPolicy: Always
          name: rest-heroes
          ports:
            - containerPort: 8083
              name: http
              protocol: TCP
      serviceAccountName: rest-heroes
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 56cbcc3ffd0ef612eb3e21df6e8cc52dc39c1dbd
    app.quarkus.io/build-timestamp: 2023-03-31 - 04:02:53 +0000
  labels:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/version: 1.0.0
  name: rest-heroes
  namespace: superheroes
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8083
  selector:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/version: 1.0.0
  type: ClusterIP
